# ocaml-flac

./: .gitignore  .travis.yml  CHANGES  Makefile.in  README  README.md  bootstrap  configure.ac  dune-project  flac.opam
.github/workflows/: main.yml
examples/: Makefile  Makefile.decode.in  Makefile.encode.in  decode.ml  dune  encode.ml
opam/: opam
src/: META.in  Makefile.in  dune  flac.ml  flac.mli  flac_decoder.ml  flac_impl.ml  flac_ogg.ml  flac_ogg.mli  flac_ogg_stubs.c  flac_stubs.c  flac_stubs.h  ogg_demuxer_flac_decoder.ml  ogg_demuxer_flac_decoder.mli  ogg_flac.ml  ogg_flac.mli  ogg_flac_stubs.c
src/config/: discover_flac.ml  discover_flac_ogg.ml
