opam-version: "2.0"
version: "dev"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-flac"
bug-reports: "https://github.com/savonet/ocaml-flac/issues"
depends: ["ocaml" "ocamlfind" "ogg"]
flags: light-uninstall
build: [
  ["./bootstrap"]
  ["./configure" "--prefix" prefix] {os != "macos"}
  [
    "./configure"
    "CFLAGS=-I/usr/local/include"
    "LDFLAGS=-L/usr/local/lib"
    "OCAMLFLAGS=-ccopt -I/usr/local/include -cclib -L/usr/local/lib"
    "--prefix"
    prefix
  ] {os = "macos"}
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "flac"]
depexts: [
  ["flac-devel"] {os-distribution = "centos"}
  ["flac-devel"] {os-distribution = "fedora"}
  ["flac-devel"] {os-distribution = "opensuse"}
  ["libflac-dev"] {os-distribution = "debian"}
  ["libflac-dev"] {os-distribution = "ubuntu"}
  ["flac"] {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-flac.git"
