opam-version: "2.0"
name: "flac"
version: "0.2.0"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-flac"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix] {os != "macos"}
  [
    "./configure"
    "CFLAGS=-I/usr/local/include"
    "LDFLAGS=-L/usr/local/lib"
    "OCAMLFLAGS=-ccopt -I/usr/local/include -cclib -L/usr/local/lib"
    "--prefix"
    prefix
  ] {os = "macos"}
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml" {>= "4.03"}
  "ocamlfind" {build}
  "ogg" {>= "0.6.0"}
]
depexts: [
  ["flac-dev"] {os-distribution = "alpine"}
  ["flac"] {os-distribution = "arch"}
  ["flac-devel"] {os-distribution = "centos"}
  ["flac-devel"] {os-distribution = "fedora"}
  ["flac-devel"] {os-family = "suse"}
  ["libflac-dev"] {os-family = "debian"}
  ["flac"] {os-distribution = "nixos"}
  ["flac"] {os = "macos" & os-distribution = "homebrew"}
]
conflicts: [
  "liquidsoap" {<= "1.4.0"}
]
bug-reports: "https://github.com/savonet/ocaml-flac/issues"
dev-repo: "git+https://github.com/savonet/ocaml-flac.git"
synopsis: "Interface for the Free Lossless Audio Codec otherwise known as FLAC"
