(executable
 (name decode)
 (modules decode)
 (optional)
 (libraries flac.ogg))

(executable
 (name encode)
 (modules encode)
 (optional)
 (libraries flac.ogg))

(rule
 (alias citest)
 (target src.wav)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -f
   lavfi
   -i
   "sine=frequency=220:duration=5"
   -ac
   2
   %{target})))

(rule
 (alias citest)
 (deps ./src.wav)
 (action
  (progn
   (run ./encode.exe ./src.wav ./src.flac)
   (run ./decode.exe -i ./src.flac -o ./dst.wav)
   (run ./encode.exe --ogg true ./src.wav ./dst.ogg)
   (run ./decode.exe -ogg true -i ./dst.ogg -o ./ogg-dst.wav))))
